--- a/src/styles/components/card.css
+++ b/src/styles/components/card.css
@@ -6,3 +6,12 @@
   -webkit-backdrop-filter: blur(20px);
   border: 1px solid rgba(111, 2, 109, 0.72);
 }
+
+.final-cta-card {
+background: rgba(24, 1, 31, 0.64);
+border-radius: 16px;
+box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+backdrop-filter: blur(8.3px);
+-webkit-backdrop-filter: blur(8.3px);
+border: 1px solid rgba(111, 2, 109, 0.72);
+}
