--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -2,5 +2,15 @@
   background-image: url("/public/clinic-background.webp");
   background-size: cover;
   background-position: center;
-  opacity: 0.1
+  opacity: 0.1;
+}
+
+.sr-only:not(:focus):not(:active) {
+  clip: rect(0 0 0 0);
+  clip-path: inset(50%);
+  height: 1px;
+  overflow: hidden;
+  position: absolute;
+  white-space: nowrap;
+  width: 1px;
 }
