--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,3 +1,39 @@
+@font-face {
+  font-family: "Poppins";
+  src: url("../fonts/Poppins-Regular.woff2") format("woff2"),
+    url("../fonts/Poppins-Regular.woff") format("woff");
+  font-weight: 400;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: "Poppins";
+  src: url("../fonts/Poppins-Medium.woff2") format("woff2"),
+    url("../fonts/Poppins-Medium.woff") format("woff");
+  font-weight: 500;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: "Poppins";
+  src: url("../fonts/Poppins-Bold.woff2") format("woff2"),
+    url("../fonts/Poppins-Bold.woff") format("woff");
+  font-weight: 700;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: "TheSeasons";
+  src: url("../fonts/The-Seasons-Bold.woff2") format("woff2"),
+    url("../fonts/The-Seasons-Bold.woff") format("woff");
+  font-weight: 700;
+  font-style: normal;
+  font-display: swap;
+}
+
 .bg-clinic {
   background-image: url("/public/clinic-background.webp");
   background-size: cover;
@@ -13,4 +49,33 @@
   position: absolute;
   white-space: nowrap;
   width: 1px;
+}
+
+.font-poppins {
+  font-family: "Poppins", sans-serif;
+}
+
+.font-poppins-regular {
+  font-family: "Poppins", sans-serif;
+  font-weight: 400;
+}
+
+.font-poppins-medium {
+  font-family: "Poppins", sans-serif;
+  font-weight: 500;
+}
+
+.font-poppins-bold {
+  font-family: "Poppins", sans-serif;
+  font-weight: 700;
+}
+
+.font-theseasons {
+  font-family: "TheSeasons", serif;
+  font-weight: 700;
+}
+
+body {
+  font-family: "Poppins", sans-serif;
+  font-weight: 400;
 }
