--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,3 +1,7 @@
+@import "./components/card.css";
+@import "./components/header.css";
+@import "./components/mesh-gradient-background.css";
+
 @font-face {
   font-family: "Poppins";
   src: url("../fonts/Poppins-Regular.woff2") format("woff2"),
