--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,3 +1,4 @@
+@import "tailwindcss";
 @import "./components/card.css";
 @import "./components/header.css";
 @import "./components/mesh-gradient-background.css";
