--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,1 +1,71 @@
-@import "tailwindcss";@import "./components/card.css";@import "./components/header.css";@import "./components/mesh-gradient-background.css";@font-face{font-family:"Poppins";src:url(../fonts/Poppins-Regular.woff2) format("woff2"),url(../fonts/Poppins-Regular.woff) format("woff");font-weight:400;font-style:normal;font-display:swap}@font-face{font-family:"Poppins";src:url(../fonts/Poppins-Medium.woff2) format("woff2"),url(../fonts/Poppins-Medium.woff) format("woff");font-weight:500;font-style:normal;font-display:swap}@font-face{font-family:"Poppins";src:url(../fonts/Poppins-Bold.woff2) format("woff2"),url(../fonts/Poppins-Bold.woff) format("woff");font-weight:700;font-style:normal;font-display:swap}@font-face{font-family:"TheSeasons";src:url(../fonts/The-Seasons-Bold.woff2) format("woff2"),url(../fonts/The-Seasons-Bold.woff) format("woff");font-weight:700;font-style:normal;font-display:swap}.bg-clinic{background-image:url(/public/clinic-background.webp);background-size:cover;background-position:center;opacity:.1}.sr-only:not(:focus):not(:active){clip:rect(0 0 0 0);clip-path:inset(50%);height:1px;overflow:hidden;position:absolute;white-space:nowrap;width:1px}.font-poppins{font-family:"Poppins",sans-serif}.font-poppins-regular{font-family:"Poppins",sans-serif;font-weight:400}.font-poppins-medium{font-family:"Poppins",sans-serif;font-weight:500}.font-poppins-bold{font-family:"Poppins",sans-serif;font-weight:700}.font-theseasons{font-family:"TheSeasons",serif;font-weight:700}body{font-family:"Poppins",sans-serif;font-weight:400}
+@import "tailwindcss";
+
+@font-face {
+  font-family: "Poppins";
+  src: url("../fonts/Poppins-Regular.woff2") format("woff2"),
+    url("../fonts/Poppins-Regular.woff") format("woff");
+  font-weight: 400;
+  font-style: normal;
+  font-display: swap;
+}
+@font-face {
+  font-family: "Poppins";
+  src: url("../fonts/Poppins-Medium.woff2") format("woff2"),
+    url("../fonts/Poppins-Medium.woff") format("woff");
+  font-weight: 500;
+  font-style: normal;
+  font-display: swap;
+}
+@font-face {
+  font-family: "Poppins";
+  src: url("../fonts/Poppins-Bold.woff2") format("woff2"),
+    url("../fonts/Poppins-Bold.woff") format("woff");
+  font-weight: 700;
+  font-style: normal;
+  font-display: swap;
+}
+@font-face {
+  font-family: "TheSeasons";
+  src: url("../fonts/The-Seasons-Bold.woff2") format("woff2"),
+    url("../fonts/The-Seasons-Bold.woff") format("woff");
+  font-weight: 700;
+  font-style: normal;
+  font-display: swap;
+}
+
+@import "./components/card.css";
+@import "./components/header.css";
+@import "./components/mesh-gradient-background.css";
+
+.sr-only:not(:focus):not(:active) {
+  clip: rect(0 0 0 0);
+  clip-path: inset(50%);
+  height: 1px;
+  overflow: hidden;
+  position: absolute;
+  white-space: nowrap;
+  width: 1px;
+}
+.font-poppins {
+  font-family: "Poppins", sans-serif;
+}
+.font-poppins-regular {
+  font-family: "Poppins", sans-serif;
+  font-weight: 400;
+}
+.font-poppins-medium {
+  font-family: "Poppins", sans-serif;
+  font-weight: 500;
+}
+.font-poppins-bold {
+  font-family: "Poppins", sans-serif;
+  font-weight: 700;
+}
+.font-theseasons {
+  font-family: "TheSeasons", serif;
+  font-weight: 700;
+}
+body {
+  font-family: "Poppins", sans-serif;
+  font-weight: 400;
+}
